// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="text-sm"
      >
        <div
          class="flex gap-4 justify-between items-center"
        >
          <div
            class="flex gap-2 items-center"
          >
            <span
              class="size-2 ml-1 rounded-full bg-green-500"
            />
            <h5>
              Test Route
            </h5>
          </div>
          <span
            class="text-xs"
          >
            20 km
          </span>
        </div>
        <div
          class="flex gap-4 justify-between items-center"
        >
          <div
            class="flex gap-1 items-center"
          >
            <svg
              class="size-4"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 384 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7L86.6 329.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128z"
              />
            </svg>
            <div
              class="text-xs"
            >
              <span
                class="block"
              >
                Via Route 1
              </span>
              <span
                class="block"
              >
                Via Route 2
              </span>
            </div>
          </div>
          <div>
            <span
              class="font-medium text-base"
            >
              25
            </span>
            <span
              class="ml-0.5"
            >
              min
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="text-sm"
    >
      <div
        class="flex gap-4 justify-between items-center"
      >
        <div
          class="flex gap-2 items-center"
        >
          <span
            class="size-2 ml-1 rounded-full bg-green-500"
          />
          <h5>
            Test Route
          </h5>
        </div>
        <span
          class="text-xs"
        >
          20 km
        </span>
      </div>
      <div
        class="flex gap-4 justify-between items-center"
      >
        <div
          class="flex gap-1 items-center"
        >
          <svg
            class="size-4"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 384 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7L86.6 329.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128z"
            />
          </svg>
          <div
            class="text-xs"
          >
            <span
              class="block"
            >
              Via Route 1
            </span>
            <span
              class="block"
            >
              Via Route 2
            </span>
          </div>
        </div>
        <div>
          <span
            class="font-medium text-base"
          >
            25
          </span>
          <span
            class="ml-0.5"
          >
            min
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`snapshot 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="text-sm"
      >
        <div
          class="flex gap-4 justify-between items-center"
        >
          <div
            class="flex gap-2 items-center"
          >
            <span
              class="size-2 ml-1 rounded-full bg-green-500"
            />
            <h5>
              Test Route
            </h5>
          </div>
          <span
            class="text-xs"
          >
            20 km
          </span>
        </div>
        <div
          class="flex gap-4 justify-between items-center"
        >
          <div
            class="flex gap-1 items-center"
          >
            <svg
              class="size-4"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 384 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7L86.6 329.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128z"
              />
            </svg>
            <div
              class="text-xs"
            >
              <span
                class="block"
              >
                Via Route 1
              </span>
              <span
                class="block"
              >
                Via Route 2
              </span>
            </div>
          </div>
          <div>
            <span
              class="font-medium text-base"
            >
              25
            </span>
            <span
              class="ml-0.5"
            >
              min
            </span>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="text-sm"
      >
        <div
          class="flex gap-4 justify-between items-center"
        >
          <div
            class="flex gap-2 items-center"
          >
            <span
              class="size-2 ml-1 rounded-full bg-yellow-500"
            />
            <h5>
              Test Route
            </h5>
          </div>
          <span
            class="text-xs"
          >
            20 km
          </span>
        </div>
        <div
          class="flex gap-4 justify-between items-center"
        >
          <div
            class="flex gap-1 items-center"
          >
            <svg
              class="size-4"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 384 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7L86.6 329.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128z"
              />
            </svg>
            <div
              class="text-xs"
            >
              <span
                class="block"
              >
                Via Route 1
              </span>
              <span
                class="block"
              >
                Via Route 2
              </span>
            </div>
          </div>
          <div>
            <span
              class="font-medium text-base"
            >
              25
            </span>
            <span
              class="ml-0.5"
            >
              min
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="text-sm"
    >
      <div
        class="flex gap-4 justify-between items-center"
      >
        <div
          class="flex gap-2 items-center"
        >
          <span
            class="size-2 ml-1 rounded-full bg-yellow-500"
          />
          <h5>
            Test Route
          </h5>
        </div>
        <span
          class="text-xs"
        >
          20 km
        </span>
      </div>
      <div
        class="flex gap-4 justify-between items-center"
      >
        <div
          class="flex gap-1 items-center"
        >
          <svg
            class="size-4"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 384 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7L86.6 329.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128z"
            />
          </svg>
          <div
            class="text-xs"
          >
            <span
              class="block"
            >
              Via Route 1
            </span>
            <span
              class="block"
            >
              Via Route 2
            </span>
          </div>
        </div>
        <div>
          <span
            class="font-medium text-base"
          >
            25
          </span>
          <span
            class="ml-0.5"
          >
            min
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`snapshot 3`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="text-sm"
      >
        <div
          class="flex gap-4 justify-between items-center"
        >
          <div
            class="flex gap-2 items-center"
          >
            <span
              class="size-2 ml-1 rounded-full bg-green-500"
            />
            <h5>
              Test Route
            </h5>
          </div>
          <span
            class="text-xs"
          >
            20 km
          </span>
        </div>
        <div
          class="flex gap-4 justify-between items-center"
        >
          <div
            class="flex gap-1 items-center"
          >
            <svg
              class="size-4"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 384 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7L86.6 329.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128z"
              />
            </svg>
            <div
              class="text-xs"
            >
              <span
                class="block"
              >
                Via Route 1
              </span>
              <span
                class="block"
              >
                Via Route 2
              </span>
            </div>
          </div>
          <div>
            <span
              class="font-medium text-base"
            >
              25
            </span>
            <span
              class="ml-0.5"
            >
              min
            </span>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="text-sm"
      >
        <div
          class="flex gap-4 justify-between items-center"
        >
          <div
            class="flex gap-2 items-center"
          >
            <span
              class="size-2 ml-1 rounded-full bg-yellow-500"
            />
            <h5>
              Test Route
            </h5>
          </div>
          <span
            class="text-xs"
          >
            20 km
          </span>
        </div>
        <div
          class="flex gap-4 justify-between items-center"
        >
          <div
            class="flex gap-1 items-center"
          >
            <svg
              class="size-4"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 384 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7L86.6 329.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128z"
              />
            </svg>
            <div
              class="text-xs"
            >
              <span
                class="block"
              >
                Via Route 1
              </span>
              <span
                class="block"
              >
                Via Route 2
              </span>
            </div>
          </div>
          <div>
            <span
              class="font-medium text-base"
            >
              25
            </span>
            <span
              class="ml-0.5"
            >
              min
            </span>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="text-sm"
      >
        <div
          class="flex gap-4 justify-between items-center"
        >
          <div
            class="flex gap-2 items-center"
          >
            <span
              class="size-2 ml-1 rounded-full bg-red-500"
            />
            <h5>
              Test Route
            </h5>
          </div>
          <span
            class="text-xs"
          >
            20 km
          </span>
        </div>
        <div
          class="flex gap-4 justify-between items-center"
        >
          <div
            class="flex gap-1 items-center"
          >
            <svg
              class="size-4"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 384 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7L86.6 329.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128z"
              />
            </svg>
            <div
              class="text-xs"
            >
              <span
                class="block"
              >
                Via Route 1
              </span>
              <span
                class="block"
              >
                Via Route 2
              </span>
            </div>
          </div>
          <div>
            <span
              class="font-medium text-base"
            >
              25
            </span>
            <span
              class="ml-0.5"
            >
              min
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="text-sm"
    >
      <div
        class="flex gap-4 justify-between items-center"
      >
        <div
          class="flex gap-2 items-center"
        >
          <span
            class="size-2 ml-1 rounded-full bg-red-500"
          />
          <h5>
            Test Route
          </h5>
        </div>
        <span
          class="text-xs"
        >
          20 km
        </span>
      </div>
      <div
        class="flex gap-4 justify-between items-center"
      >
        <div
          class="flex gap-1 items-center"
        >
          <svg
            class="size-4"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 384 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7L86.6 329.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128z"
            />
          </svg>
          <div
            class="text-xs"
          >
            <span
              class="block"
            >
              Via Route 1
            </span>
            <span
              class="block"
            >
              Via Route 2
            </span>
          </div>
        </div>
        <div>
          <span
            class="font-medium text-base"
          >
            25
          </span>
          <span
            class="ml-0.5"
          >
            min
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
